--- a/source/assets/scss/base/_base.scss
+++ b/source/assets/scss/base/_base.scss
@@ -106,6 +106,10 @@ a {
   }
 }
 
+a.linkAnexo{
+  color: #12263F !important;
+}
+
 a:not([href]) {
   color: $link-color;
   text-decoration: $link-decoration;
