--- a/source/assets/scss/pages/custom.scss
+++ b/source/assets/scss/pages/custom.scss
@@ -18,7 +18,7 @@
 }
 .borde{
     border: solid;
-    border-color: white;
+    border-color: black;
 }
 .bg-color-verde-claro {
     background-color: #92934E;
