--- a/source/pug/includes/head.pug
+++ b/source/pug/includes/head.pug
@@ -1,7 +1,7 @@
 meta(charset="UTF-8")
 meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
 title Vigilancia de los eventos de desnutrición aguda y de muerte por IRA, EDA o desnutrición
-meta(meta name="description" content="Tanto la morbilidad como la mortalidad de la desnutrición aguda en los niños y niñas menores de 5 años, son eventos de interés en salud pública para el país y los casos que se presenten deben ser reportados al sistema nacional de vigilancia en salud pública - Sivigila, de acuerdo a los parámetros dados por el Instituto Nacional de Salud - INS")    
+meta(meta name="description" content="Tanto la morbilidad como la mortalidad debido a la desnutrición aguda en los niños y niñas menores de 5 años, son eventos de interés en salud pública para el país; los casos que se presenten deben ser reportados al sistema nacional de vigilancia en salud pública - Sivigila, de acuerdo con los parámetros dados por el Instituto Nacional de Salud - INS.")    
 link(rel="icon",type="image/svg+xml",href="assets/images/logos/senaLogo.svg")
 link(rel="stylesheet", href="assets/fonts/feather/feather.css")
 link(rel="stylesheet", href="assets/fonts/fontawesome/css/font-awesome.css")
