--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -24,7 +24,8 @@ mixin pageHeader(tituloTema, srcImagen, pagina)
                             img.img-fluid(src='assets/images/header/icon_dots.svg', alt='alt')
 
                     else 
-                        p.curso-descripcion Tanto la morbilidad como la mortalidad de la desnutrición aguda en los niños y niñas menores de 5 años, son eventos de interés en salud pública para el país y los casos que se presenten deben ser reportados al sistema nacional de vigilancia en salud pública - Sivigila, de acuerdo a los parámetros dados por el Instituto Nacional de Salud - INS.
+                        p.curso-descripcion Tanto la morbilidad como la mortalidad debido a la desnutrición aguda en los niños y niñas menores de 5 años, son eventos de interés en salud pública para el país; los casos que se presenten deben ser reportados al sistema nacional de vigilancia en salud pública - Sivigila, de acuerdo con los parámetros dados por el Instituto Nacional de Salud - INS.
+
 
                     if pagina == 'home'
                         a.curso-btn-iniciar.btn.btn-light(href="main.html").mb-4
