Cambio titulo programa

--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -7,7 +7,7 @@ mixin pageHeader(tituloTema, srcImagen, pagina)
 
                 .curso-container
 
-                    h3#curso-titulo-componente.curso-subtitulo.text-color-orange Manejo integrado de la desnutrición aguda en niño menor de 5 años.
+                    h3#curso-titulo-componente.curso-subtitulo.text-color-orange Manejo integrado de la desnutrición aguda en menor de 5 años.
                     h1#curso-titulo-tema.curso-titulo Vigilancia de los eventos de desnutrición aguda y de muerte por IRA, EDA o desnutrición.
 
                     .brand-line-primary
