AJuste Creditos del Programa

--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -105,7 +105,7 @@ mixin creditosFooter(ruta)
                     h3.footer-subtitulo.mb-4 ECOSISTEMA DE RECURSOS EDUCATIVOS DIGITALES 
 
                     p.footer-texto.mb-2
-                        | #[strong Ingry Dayanna Bonilla Monzon	 ]<br/>   
+                        | #[strong Maria Camila García Santamaría]<br/>   
                         span.text-small Líder del equipo
 
             .row.mt-5
@@ -115,18 +115,8 @@ mixin creditosFooter(ruta)
                         | Contenido Instruccional
 
                     p.footer-texto.mb-2
-                        | #[strong Gloria Matilde Lee Mejía	 ]<br/>   
-                        span.text-small Responsable del equipo
-
-                    p.footer-texto
-                        span.text-small.text-uppercase Centro de Comercio y Servicios
-                        br
-                        span.text-small Regional Tolima
-
-
-                    p.footer-texto.mb-2
                         | #[strong Rafael Nelftalí Lizcano Reyes]<br/>               
-                        span.text-small Asesor pedagógico<br/>
+                        span.text-small Asesor metodológico y pedagógico<br/>
 
                     p.footer-texto
                         span.text-small.text-uppercase CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA   
@@ -134,52 +124,31 @@ mixin creditosFooter(ruta)
                         span.text-small Regional Santander    
 
                     p.footer-texto.mb-2
-                        | #[strong María Cecilia Cuartas]<br/>
-                        span.text-small Asesora Nutrición<br/>
+                        | #[strong Pedro Ducuara]<br/>
+                        span.text-small Experto temático<br/>
 
                     p.footer-texto
-                        span.text-small.text-uppercase Consultor Externo de DSM
+                        span.text-small.text-uppercase Ministerio de Salud y Protección Social
 
                     p.footer-texto.mb-2
-                        | #[strong Claudia Marcela Camargo Ramos]<br/>
-                        span.text-small Profesional Especializado<br/>
-
-                    p.footer-texto
-                        span.text-small.text-uppercase ICBF
-
-                    p.footer-texto.mb-2
-                        | #[strong Luz Angela Ochoa]<br/>
-                        span.text-small Profesional Especializado<br/>
-
-                    p.footer-texto
-                        span.text-small.text-uppercase Ministerio de Salud y PS
-
-                    p.footer-texto.mb-2
-                        | #[strong Paul René Ocampo]<br/>
-                        span.text-small Asesor Dirección de Nutrición ICBF<br/>
-
-                    p.footer-texto
-                        span.text-small.text-uppercase ICBF
-
-
-                    p.footer-texto.mb-2
-                        | #[strong Oscar Absalón Guevara]<br/>   
+                        | #[strong Maritza Paz]<br/>
                         span.text-small Diseñador Instruccional<br/>
-
-                    p.footer-texto
-                        span.text-small.text-uppercase Centro de Gestión Industrial 
-                        br
-                        span.text-small Regional Distrito Capital
-
-
-                    p.footer-texto.mb-2
-                        | #[strong Silvia Milena Sequeda Cárdenas]<br/>   
-                        span.text-small Evaluador Instruccional<br/>
 
                     p.footer-texto
                         span.text-small.text-uppercase Centro de Diseño y Metrología
                         br
                         span.text-small Regional Distrito Capital
+
+                    p.footer-texto.mb-2
+                        | #[strong María Isabel Román Rueda]<br/>
+                        span.text-small Revisora de estilo<br/>
+
+                    p.footer-texto
+                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura 
+                        br
+                        span.text-small Regional Santander
+
+                    
 
 
                 .col-12.col-md-5
@@ -187,28 +156,28 @@ mixin creditosFooter(ruta)
                         .fa.fa-caret-right.mr-2
                         | Diseño y desarrollo de recursos educativos digitales
                     
-                    p.footer-texto
+                    p.footer-texto.mb-2
                         | #[strong Francisco José Lizcano Reyes ]<br/>   
                         span.text-small Responsable del equipo<br/>
+                    p.footer-texto
+                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura 
+                        br
+                        span.text-small Regional Santander
 
                     p.footer-texto
                         | #[strong Leyson Fabian Castaño Perez]<br/>   
-                        span.text-small Integración de recursos y pruebas<br/>
+                        span.text-small Soporte organizacional<br/>
+                    p.footer-texto
+                        span.text-small.text-uppercase CENTRO DE COMERCIO Y SERVICIOS  
+                        br
+                        span.text-small Regional Tolima
 
                     p.footer-texto                           
-                        | #[strong Eulises Orduz Amezquita]<br/>
-                        span.text-small Diseño Web<br/>
-
-                    p.footer-texto                           
-                        | #[strong Camilo Andrés Villamizar Lizcano]<br/>  
-                        | #[strong Nelson Iván Vera Briceño]<br/>
-                        | #[strong Lady Adriana Ariza Luque]<br/>
-                        | #[strong Maria Camila Ovalle Ospina ]<br/>
-                        | #[strong Víctor Raúl Cárdenas Cáceres]<br>
-                        span.text-small Producción Audiovisual<br/>
+                        | #[strong Carlos Julian Ramirez Benitez]<br/>
+                        span.text-small Diseño Web & Producción Audiovisual<br/>
 
                     p.footer-texto
-                        | #[strong Edgar Mauricio Cortes]<br/>           
+                        | #[strong Lizeth Karina Manchego Suárez]<br/>           
                         span.text-small Desarrollo Front-End<br/>
 
                     p.footer-texto
@@ -222,10 +191,8 @@ mixin creditosFooter(ruta)
 
 
                     p.footer-texto
-                        | #[strong Brayan Steven Pinto Díaz ]<br/>
-                        | #[strong Edilson Laverde Molina ]<br/>
-                        | #[strong Ricardo Alfonso González Vargas ]<br/>
-                        span.text-small Validación de recursos.<br/>
+                        | #[strong Milady Tatiana Villamil Castellanos ]<br/>
+                        span.text-small Validación de recursos<br/>
 
                     p.footer-texto
                         span.text-small.text-uppercase Centro de comercio y servicios
