--- a/source/pug/includes/page-home_indice_tematico.pug
+++ b/source/pug/includes/page-home_indice_tematico.pug
@@ -9,6 +9,6 @@ h2 Desarrollo de <br>contenidos
             
             .card-body
                 ul.list-group.list-group-flush.list.my-n3.nav-temas
-                    +navTemaItem('0', 'Introducción', 'main.html#page/intro/')
+                    +navTemaItem('text', 'Introducción', 'main.html#page/intro/')
                     +navTemaItem('1', 'Vigilancia en salud pública del evento desnutrición aguda moderada y severa en menores de cinco años', 'main.html#page/tema-1/')
                     +navTemaItem('2', 'Vigilancia integrada de muertes en menores de cinco años por IRA, EDA o desnutrición', 'main.html#page/tema-2/')
