ajustes enlaces del 1 de octubre

--- a/source/pug/pages/referencias.pug
+++ b/source/pug/pages/referencias.pug
@@ -12,9 +12,9 @@ include ../mixins/functions
         
         +referenciaItem("Instituto Nacional de Salud. (2017). Protocolo de vigilancia en salud pública, desnutrición aguda moderada y severa en menores de cinco años, código 113.","https://www.ins.gov.co/buscador-eventos/Lineamientos/Pro_Desnutrici%C3%B3n.pdf")
 
-        +referenciaItem("Instituto Nacional de Salud. (2017). Protocolo vigilancia en salud pública. Vigilancia integrada de muertes en menores de cinco años por infección respiratoria aguda, enfermedad diarreica aguda o desnutrición, código 591.","https://www.ins.gov.co/buscador-eventos/Lineamientos/PRO%20Mortalidad%20en%20menores_.pdf")
+        +referenciaItem("Instituto Nacional de Salud. (2017). Protocolo vigilancia en salud pública. Vigilancia integrada de muertes en menores de cinco años por infección respiratoria aguda, enfermedad diarreica aguda o desnutrición, código 591.","https://www.ins.gov.co/buscador-eventos/Lineamientos/Pro_Mortalidad%20menores%205%20a%C3%B1os.pdf")
 
-        +referenciaItem("Instituto Nacional de Salud. (2018). Manual del usuario sistema aplicativo Sivigila.","http://idsn.gov.co/site/web2/images/documentos/epidemiologia/aplicativo/Manual_SIVIGILA_V9_Resaltado.pdf")
+        +referenciaItem("Instituto Nacional de Salud. (2018). Manual del usuario sistema aplicativo Sivigila.","http://www.idsn.gov.co/images/documentos/epidemiologia/aplicativo/Manual_SIVIGILA_V9_Resaltado.pdf")
 
         +referenciaItem("Ministerio de la Protección Social. (9 de octubre de 2006). Decreto 3518 de 2006. Por el cual se crea y reglamenta el Sistema de Vigilancia en Salud Pública y se dictan otras disposiciones.","https://www.minsalud.gov.co/sites/rid/Lists/BibliotecaDigital/RIDE/DE/DIJ/Decreto-3518-de-2006.pdf")
 
