--- a/source/pug/pages/tema-1.pug
+++ b/source/pug/pages/tema-1.pug
@@ -287,7 +287,7 @@
 
             
             .bg-color-verde-claro.mt-5.py-4.cont-flecha.text-center.mt-5
-                p.font-weight-bold EAPB de salud:
+                p.font-weight-bold EAPB:
                 
             .row.mt-5.mr-auto.pl-3
                     .col-auto
