--- a/source/pug/pages/tema-2.pug
+++ b/source/pug/pages/tema-2.pug
@@ -162,10 +162,16 @@
                 .row.bg-rosa-claro.mx-0.mt-5 
                     .col-7.my-auto.pl-5
                         h3.texto-naranja A- Definición de la fuente
-                        p.mt-5 Estadísticas vitales y Registro Único de Afiliación -RUAF, módulo de defunciones: a partir de la información estadística del certificado de defunción, se podrán identificar casos de enfermedades objeto de vigilancia epidemiológica, la cual servirá para conocer la magnitud de problemas en salud, evaluar programas y realizar estudios de factores de riesgo. La cobertura de las estadísticas vitales se da a nivel nacional, departamental y municipal.
 
                     .col-5.m-0.p-0
                         img(src="assets/images/pages/tema-2/tema-2-11.svg").img-fluid
+                .row.bg-rosa-mas-claro.mx-0.mt-2
+                    .col-12
+                        .row.mt-5.mr-auto.pl-3.mx-0
+                            .col-auto
+                                img(src="assets/images/pages/tema-1/vineta.svg").img-fluid
+                            .col-11
+                                p.pt-1 Estadísticas vitales y Registro Único de Afiliación -RUAF, módulo de defunciones: a partir de la información estadística del certificado de defunción, se podrán identificar casos de enfermedades objeto de vigilancia epidemiológica, la cual servirá para conocer la magnitud de problemas en salud, evaluar programas y realizar estudios de factores de riesgo. La cobertura de las estadísticas vitales se da a nivel nacional, departamental y municipal.                         
                 .row.bg-rosa-mas-claro.mx-0.mt-2
                     .col-12
                         .row.mt-5.mr-auto.pl-3.mx-0
@@ -238,7 +244,9 @@
                 .row.bg-azul-mas-claro.mx-0.mt-2
                     .col-12.pl-4.pt-5 
                         p.font-weight-bold Notificación semanal.
-                        p.mt-3.pb-5 la UNM notifica a la UND (departamental) semanalmente, a partir de la estructura y contenidos mínimos que hacen parte del subsistema de información, para la vigilancia de los eventos de interés en salud pública.
+                        p.mt-4 la UNM notifica a la UND (departamental) semanalmente, a partir de la estructura y contenidos mínimos que hacen parte del subsistema de información, para la vigilancia de los eventos de interés en salud pública.
+
+                        p.mt-4.pb-5 El departamento notifica a la nación (INS) semanalmente, a partir de la estructura y contenidos mínimos que hacen parte del subsistema de información para la vigilancia de los eventos de interés en salud pública.
 
 
                 .row.bg-verde-claro.mx-0.mt-2 
