Ajuste imagen // repositorio 2021

--- a/source/pug/pages/tema-1.pug
+++ b/source/pug/pages/tema-1.pug
@@ -216,7 +216,7 @@
             .row.bg-verde-mas-claro.mx-0   
                 .col-12.text-center
                     p.font-weight-bold.mt-5.ml-5.text-left Notificación Inmediata 
-                    img(src="assets/images/pages/tema-1/tema-1-11.svg").img-fluid.mt-4.p-5
+                    img(src="assets/images/pages/tema-1/tema-1-11.png").img-fluid.mt-4.p-5
                     p.mb-3 Fuente: adaptado de Sivigila (2019).
                     p.text-left Debe existir una transferencia de la información en el ámbito local, en el departamental y en el nacional. 
                     p.mb-5.text-left Se informará a las EAPB de los casos, a través del sistema de vigilancia en salud pública. De igual forma, deberá generarse la entrega de información y coordinación, entre los equipos de vigilancia en salud pública y los programas de seguridad alimentaria y nutricional, con el fin de activar la ruta de atención a la desnutrición.
