--- a/source/pug/pages/tema-2.pug
+++ b/source/pug/pages/tema-2.pug
@@ -259,7 +259,7 @@
                 .row.bg-verde-mas-claro.mx-0   
                     .col-12.text-center
                         p.font-weight-bold.mt-5.ml-5.text-left Notificación Inmediata 
-                        img(src="assets/images/pages/tema-1/tema-1-11.svg").img-fluid.mt-4.p-5
+                        img(src="assets/images/pages/tema-1/tema-1-11.png").img-fluid.mt-4.p-5
                         p.mb-3 Fuente: adaptado de Sivigila (2019).
                 .row.bg-naranja-claro.mx-0.mt-2 
                     .col-7.my-auto.pl-5
